# ginko

./: .gitignore  package.json
engine/src/: attacks.rs  bitboard.rs  board.rs  evaluation.rs  hand.rs  lib.rs  main.rs  moves.rs  piece.rs  position.rs  search.rs  table.rs  usi.rs  zobrist.rs
gui/: README.md  pyproject.toml
gui/src/ginko_gui/: __init__.py  audio.py  engine_client.py  main.py
gui/tests/: test_board_state.py
mics2_3a_sample_mac/: .gitignore
